--- a/Purchasing.Mvc/Views/Workgroup/UpdateAccountsFromFinjector.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/UpdateAccountsFromFinjector.cshtml
@@ -99,7 +99,7 @@
             <ul>
                 <li>
                     <div class="editor-field">
-                        <input id="onlystring" name="onlystring" type="checkbox" />
+                        <input id="onlyAdd" name="onlyAdd" type="checkbox" value="true" />
                     </div>
                     <div class="editor-label">Only Add and Update Chart Strings</div>
                 </li>
