Allow large for data

--- a/Purchasing.Mvc/Views/Shared/_CssBundle.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_CssBundle.cshtml
@@ -4,7 +4,7 @@
 {
   case "~/Css/main":
     <environment names="Staging,Production">
-      <link rel="stylesheet" href="~/bundles/main.min.css" />
+      <link rel="stylesheet" href="~/bundles/main.min.css?v=2" />
     </environment>
     <environment names="Development">
       <link rel="stylesheet" href="~/Css/Site.css" />
