Remove KFS text

--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -168,7 +168,7 @@
                     <h2>Welcome to the UC Davis PrePurchasing System</h2>
                     
                     <p>
-                        This application is designed to handle the departmental pre-purchasing process.  PrePurchasing allows users to submit any type of order request, including KFS, MyTravel, and other campus services. This application also aids in the departmental approval process associated with approving order requests. Seamless integration with KFS.
+                        This application is designed to handle the departmental pre-purchasing process.  PrePurchasing allows users to submit any type of order request, including Aggie Enterprise, MyTravel, and other campus services. This application also aids in the departmental approval process associated with approving order requests. Seamless integration with Aggie Enterprise.
                     </p>
                     
                     <p>
