--- a/Purchasing.Mvc/Views/Order/_ReviewLineSplits.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewLineSplits.cshtml
@@ -3,11 +3,11 @@
 @if (!Model.HasLineSplits)
 {
     <section id="accounts" class="ui-corner-all display-form">
-    
+
         <header class="ui-corner-top ui-widget-header showInNav">Account Information</header>
 
         <div class="section-contents">
-        
+
             @* Only one "split" meaning this entire order is one account *@
             @if (Model.Splits.Count() == 1)
             {
@@ -22,27 +22,35 @@
                     else
                     {
                         <strong>Account:</strong> <span class="account">@split.AccountDisplay</span>
-                    }
-                    
-                    @if (string.IsNullOrWhiteSpace(split.FinancialSegmentString))
-                    {
-                        <strong>SubAccount:</strong><span class="subaccount">@Model.GetSubAccountDisplayForSplit(@split)</span>
-                        <strong>Project:</strong> <span class="project">@split.Project</span>
-                    }
+                        @if (!string.IsNullOrWhiteSpace(split.SubAccount) || !string.IsNullOrWhiteSpace(split.Project))
+                        {
+                            <strong>SubAccount:</strong>
+
+                            <span class="subaccount">@Model.GetSubAccountDisplayForSplit(@split)</span>
+                            <strong>Project:</strong> <span class="project">@split.Project</span>
+                        }
+                    }                    
+
                 </div>
             }
             @* Order split over multiple accounts *@
             else
             {
+                //check if any spits have a subaccount or project
+                var showKfsInfo = Model.Splits.Any(x => !string.IsNullOrWhiteSpace(x.SubAccount)) || Model.Splits.Any(x => !string.IsNullOrWhiteSpace(x.Project));
+
                 <div class="row-split" style="width:100%">
-                <table class="noicon">
-                
-                    <thead>
-                        <tr>
-                            <th>Account</th>
-                            <th>SubAccount</th>
-                            <th>Project</th>
-                            <th>Amount</th>
+                    <table class="noicon">
+
+                        <thead>
+                            <tr>
+                                <th>Account</th>
+                                @if (showKfsInfo)
+                                {
+                                    <th>SubAccount</th>
+                                    <th>Project</th>
+                                }
+                                <th>Amount</th>
                         </tr>
                     </thead>
 
@@ -59,9 +67,11 @@
                                     {
                                         <td>@split.AccountDisplay</td>
                                     }
-                                    
-                                <td>@Model.GetSubAccountDisplayForSplit(@split)</td>
-                                <td>@split.Project</td>
+                                @if(showKfsInfo)
+                                {
+                                    <td>@Model.GetSubAccountDisplayForSplit(@split)</td>
+                                    <td>@split.Project</td>
+                                }    
                                 <td>@split.Amount</td>
                             </tr>
                         }
