--- a/Purchasing.Mvc/Views/Order/_Options.cshtml
+++ b/Purchasing.Mvc/Views/Order/_Options.cshtml
@@ -10,12 +10,12 @@ purchasing.options({
     CoaValidateUrl: '@Url.Action("ValidateCoA", "Order")',
     AddKfsVendorUrl: '@Url.Action("AddKfsVendor", "WorkgroupVendor", new { id = Model.Workgroup.Id })',
     SearchVendorUrl: '@Url.Action("SearchVendor", "WorkgroupVendor")',
-    CheckDuplicateVendorUrl: '@Url.Action("CheckDuplicateVendor", "Workgroup")',
+    CheckDuplicateVendorUrl: '@Url.Action("CheckDuplicateVendor", "WorkgroupVendor")',
     SearchVendorAddressUrl: '@Url.Action("SearchVendorAddress", "WorkgroupVendor")',
     SearchCommodityCodeUrl: '@Url.Action("SearchCommodityCodes", "Ajax")',
     SearchBuildingUrl : '@Url.Action("SearchBuilding", "Ajax")',
-    SearchCampusLocationUrl : '@Url.Action("SearchAddress", "Workgroup")',
-    GetCampusLocationUrl : '@Url.Action("GetAddress", "Workgroup")',
+    SearchCampusLocationUrl : '@Url.Action("SearchAddress", "Order")',
+    GetCampusLocationUrl : '@Url.Action("GetAddress", "Order")',
     GetLineItemsAndSplitsUrl: '@Url.Action("GetLineItemsAndSplits", new { id = Model.Order.Id })',
     GetSubAccounts: '@Url.Action("GetSubAccounts", new { id = Model.Order.Id })',
     GetRequesters: '@Url.Action("GetRequesters", "Order", new { id = Model.Workgroup.Id })',
