--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -184,17 +184,20 @@
                     </p>
 
                 </div>
-		    
-		<div id="announce">
-		
-			<h2>Aggie Enterprise Announcement!</h2>
-			
-			<p>
-			  PrePurchasing is live for creating Purchase Requsitions in Aggie Enterprise!!!
-			</p>
 
-            <p><a href="https://computing.caes.ucdavis.edu/documentation/purchasing/Aggie-Enterprise-Updates" target="_blank">This FAQ has some updates and useful information.</a></p>
-		</div>
+                <div id="announce">
+
+                    <h2>Aggie Enterprise Announcement!</h2>
+
+                    <p>
+                        <div id="error-message">
+                            On July 1, 2025 the KFS account conversion feature will stop working and any orders still using KFS accounts will not be approvable until they are replaced with a chart string.
+                            <p>Please ensure all workgroup accounts have been updated before this.</p>
+                        </div>
+                    </p>
+
+                    <p><a href="https://computing.caes.ucdavis.edu/documentation/purchasing/Aggie-Enterprise-Updates" target="_blank">This FAQ has some updates and useful information.</a></p>
+                </div>
                 
                 
                 <div id="browsers">
