--- a/Purchasing.Mvc/Views/User/_GeneralEmailPreferences.cshtml
+++ b/Purchasing.Mvc/Views/User/_GeneralEmailPreferences.cshtml
@@ -17,9 +17,18 @@
                 <div class="editor-label">
                     @Html.LabelFor(model => model.AddNote)
                 </div>
-                <div class="editor-field showTip" title="Someone adds a note to an order you have acted on.">
+                <div class="editor-field showTip" title="Someone adds a note to an order you have acted on. Or an order at the level you are assigned to.">
                     @Html.EditorFor(model => model.AddNote)
                     @Html.ValidationMessageFor(model => model.AddNote)
+                </div>
+            </li>
+            <li>
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.IncludeNotesNotAssigned)
+                </div>
+                <div class="editor-field showTip" title="Someone adds a new order, you have Add Note checked above, and you are included as someone who can act on the order but are not directly assigned at that level.">
+                    @Html.EditorFor(model => model.IncludeNotesNotAssigned)
+                    @Html.ValidationMessageFor(model => model.IncludeNotesNotAssigned)
                 </div>
             </li>
         </ul>
