--- a/Purchasing.Mvc/Views/Order/_ReviewFavs.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewFavs.cshtml
@@ -8,7 +8,7 @@
         <div class="section-contents">
             <div class="section-text">
                 <h3>
-                    Order is: <div id="fav-status-text">@(Model.Favorite.IsActive ? "a favorite" : "not a favorite")</div>
+                    Order is: <span id="fav-status-text">@(Model.Favorite.IsActive ? "a favorite" : "not a favorite")</span>
                 </h3>
             </div>
         </div>
