--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -108,6 +108,8 @@
                         }
 
                         <li>@Html.ActionLink("Order History", "Index", "History")</li>
+
+                        <li>@Html.ActionLink("Favorites", "Index", "Favorites")</li>
                         
                         @if (roles.Contains(Role.Codes.Requester))
                         {
