Bust the cache?

--- a/Purchasing.Mvc/Views/Shared/_JsBundle.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_JsBundle.cshtml
@@ -75,7 +75,7 @@
 
   case "~/bundles/orderreview":
     <environment names="Staging,Production">
-      <script src="~/bundles/orderreview.min.js"></script>
+      <script src="~/bundles/orderreview.min.js?v=1.1"></script>
     </environment>
     <environment names="Development">
       <script src="~/Scripts/public/single/fileuploader.js"></script>
