Update KFS/AE wording

--- a/Purchasing.Mvc/Views/Order/_ReviewLineItems.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewLineItems.cshtml
@@ -185,7 +185,7 @@
                     <td class="row-total-value">@Model.Order.Tax().ToString("c")</td>
                 </tr>
                 <tr class="item-footer">
-                    <td colspan="5"><em>*All totals are estimates, final values are determined after order is uploaded to KFS.</em></td>
+                    <td colspan="5"><em>*All totals are estimates, final values are determined after order is uploaded to Aggie Enterprise.</em></td>
                     <td class="label row-total-label row-total-grandtotal">Grand Total:</td>
                     <td class="row-total-value">@Model.Order.GrandTotalFromDb.ToString("c")</td>
                 </tr>
